syntax = "proto3";

package main;

option go_package = "./pb";

import "proto/memory_message.proto";
import "proto/processor_message.proto";
import "proto/storage_message.proto";
import "proto/screen_message.proto";
import "proto/keyboard_message.proto";
import "proto/filter_message.proto";
import "google/protobuf/timestamp.proto";


message Laptop {
    string id = 1;
    string brand = 2;
    string name = 3;
    CPU cpu = 4;
    Memory ram = 5;
    repeated GPU gpus = 6;
    repeated Storage storages = 7;
    Screen screen = 8;
    Keyboard keyboard = 9;
    oneof weight {
        double weight_kg = 10;
        double weight_lb = 11;
    }

    double price_usd = 12;
    uint32 release_year = 13;
    google.protobuf.Timestamp updated_at = 14;
}


message CreateLaptopRequest {
    Laptop laptop = 1;
}

message CreateLaptopResponse {
    string id = 1;
}

message SearchLaptopRequest {
    Filter filter = 1;
}

message SearchLaptopResponse {
    Laptop laptop = 1;
}

service LaptopService {
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
    rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse) {};

}

